--- a/Instant Lyrics/Instant Lyrics/Base.lproj/Main.storyboard
+++ b/Instant Lyrics/Instant Lyrics/Base.lproj/Main.storyboard
@@ -175,21 +175,21 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" reuseIdentifier="PrependText" editingAccessoryType="disclosureIndicator" textLabel="wRc-ot-jyx" detailTextLabel="beA-DK-BKW" style="IBUITableViewCellStyleSubtitle" id="Oae-gd-ITi">
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" reuseIdentifier="subtitle" editingAccessoryType="disclosureIndicator" textLabel="wRc-ot-jyx" detailTextLabel="beA-DK-BKW" style="IBUITableViewCellStyleSubtitle" id="Oae-gd-ITi">
                                 <rect key="frame" x="0.0" y="86" width="600" height="44"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="Oae-gd-ITi" id="wHN-lN-WE6">
                                     <rect key="frame" x="0.0" y="0.0" width="567" height="43"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Search Term" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="wRc-ot-jyx">
+                                        <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Title" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="wRc-ot-jyx">
                                             <rect key="frame" x="15" y="12" width="92" height="20"/>
                                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                             <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
-                                        <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Lyrics" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="beA-DK-BKW">
+                                        <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Subtitle" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="beA-DK-BKW">
                                             <rect key="frame" x="522" y="12" width="43" height="20"/>
                                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="11"/>
@@ -202,32 +202,29 @@
                                     <segue destination="YQI-tp-5yr" kind="show" identifier="PrependTextSegue" id="1If-94-nO8"/>
                                 </connections>
                             </tableViewCell>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" reuseIdentifier="SearchEngine" editingAccessoryType="disclosureIndicator" textLabel="JSB-z6-nql" detailTextLabel="Bqq-OH-jrw" style="IBUITableViewCellStyleSubtitle" id="gxN-op-nsM">
-                                <rect key="frame" x="0.0" y="130" width="600" height="44"/>
+                            <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="NoMusicPlayingToggle" id="fLf-4U-yKp">
+                                <rect key="frame" x="0.0" y="0.0" width="600" height="44"/>
                                 <autoresizingMask key="autoresizingMask"/>
-                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="gxN-op-nsM" id="8te-iT-gri">
-                                    <rect key="frame" x="0.0" y="0.0" width="567" height="43"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="fLf-4U-yKp" id="d0u-5G-c8K">
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Search Engine" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="JSB-z6-nql">
-                                            <rect key="frame" x="15" y="12" width="105" height="20"/>
-                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="&quot;No Music Playing&quot; Screen" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1FZ-Vj-aKu">
+                                            <rect key="frame" x="15" y="12" width="196" height="20"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                             <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
-                                        <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Google" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="Bqq-OH-jrw">
-                                            <rect key="frame" x="513" y="12" width="52" height="20"/>
-                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                            <fontDescription key="fontDescription" type="system" pointSize="11"/>
-                                            <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
-                                            <nil key="highlightedColor"/>
-                                        </label>
+                                        <switch opaque="NO" tag="1" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="tb8-Lv-F44">
+                                            <rect key="frame" x="543" y="6" width="51" height="31"/>
+                                        </switch>
                                     </subviews>
+                                    <constraints>
+                                        <constraint firstAttribute="centerY" secondItem="tb8-Lv-F44" secondAttribute="centerY" id="LEd-p0-MYf"/>
+                                        <constraint firstItem="1FZ-Vj-aKu" firstAttribute="leading" secondItem="d0u-5G-c8K" secondAttribute="leadingMargin" constant="7" id="cZU-kn-hgN"/>
+                                        <constraint firstItem="tb8-Lv-F44" firstAttribute="trailing" secondItem="d0u-5G-c8K" secondAttribute="trailingMargin" id="tzg-eq-FTg"/>
+                                        <constraint firstAttribute="centerY" secondItem="1FZ-Vj-aKu" secondAttribute="centerY" id="ycF-4H-sec"/>
+                                    </constraints>
                                 </tableViewCellContentView>
-                                <connections>
-                                    <segue destination="YQI-tp-5yr" kind="show" identifier="SearchEngineSegue" id="6Bo-mb-Adg"/>
-                                </connections>
                             </tableViewCell>
                         </prototypes>
                         <connections>
@@ -301,8 +298,5 @@
         <image name="Safari" width="21" height="21"/>
         <image name="Settings" width="21" height="21"/>
     </resources>
-    <inferredMetricsTieBreakers>
-        <segue reference="6Bo-mb-Adg"/>
-    </inferredMetricsTieBreakers>
     <color key="tintColor" red="0.76301255515859001" green="0.0" blue="1" alpha="1" colorSpace="calibratedRGB"/>
 </document>
