--- a/Instant Lyrics/Instant Lyrics/Base.lproj/Main.storyboard
+++ b/Instant Lyrics/Instant Lyrics/Base.lproj/Main.storyboard
@@ -18,19 +18,11 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <webView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="2sk-uT-h54">
-                                <rect key="frame" x="0.0" y="20" width="600" height="536"/>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="pOu-Ad-gnl">
+                                <rect key="frame" x="0.0" y="22" width="600" height="534"/>
                                 <animations/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="433" id="0UL-TT-lyH"/>
-                                </constraints>
-                                <variation key="default">
-                                    <mask key="constraints">
-                                        <exclude reference="0UL-TT-lyH"/>
-                                    </mask>
-                                </variation>
-                            </webView>
+                            </view>
                             <visualEffectView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="HnN-Ai-rSS">
                                 <rect key="frame" x="0.0" y="556" width="600" height="44"/>
                                 <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="eFj-aN-H17">
@@ -58,7 +50,6 @@
                                 <animations/>
                                 <constraints>
                                     <constraint firstAttribute="height" relation="lessThanOrEqual" constant="22" id="8iX-Vt-pma"/>
-                                    <constraint firstAttribute="height" constant="44" id="XYZ-yn-U7Q"/>
                                     <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="44" id="fQY-By-Yh4"/>
                                     <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="22" id="yqN-iP-Ok5"/>
                                 </constraints>
@@ -99,7 +90,6 @@
                                 <variation key="heightClass=compact">
                                     <mask key="constraints">
                                         <include reference="8iX-Vt-pma"/>
-                                        <exclude reference="XYZ-yn-U7Q"/>
                                         <include reference="yqN-iP-Ok5"/>
                                     </mask>
                                 </variation>
@@ -112,9 +102,6 @@
                                     <animations/>
                                 </view>
                                 <animations/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="20" id="1eO-hk-Str"/>
-                                </constraints>
                                 <blurEffect style="light"/>
                             </visualEffectView>
                         </subviews>
@@ -122,42 +109,38 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="CH5-mB-jhC" firstAttribute="top" secondItem="3Dq-Rc-CDJ" secondAttribute="bottom" id="2cz-Kg-xEB"/>
+                            <constraint firstItem="pOu-Ad-gnl" firstAttribute="top" secondItem="CH5-mB-jhC" secondAttribute="bottom" id="2z9-EJ-Rtr"/>
                             <constraint firstItem="CH5-mB-jhC" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="topMargin" constant="20" id="2zm-jB-RJa"/>
-                            <constraint firstItem="3Dq-Rc-CDJ" firstAttribute="width" secondItem="8bC-Xf-vdC" secondAttribute="width" id="6Eu-kT-Qjn"/>
-                            <constraint firstItem="HnN-Ai-rSS" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="9QX-Qx-xCQ"/>
-                            <constraint firstItem="HnN-Ai-rSS" firstAttribute="width" secondItem="0Dq-g2-0E5" secondAttribute="width" id="FUn-Gp-drZ"/>
-                            <constraint firstItem="2sk-uT-h54" firstAttribute="width" secondItem="8bC-Xf-vdC" secondAttribute="width" id="IMY-BB-ptY"/>
-                            <constraint firstItem="2sk-uT-h54" firstAttribute="top" secondItem="CH5-mB-jhC" secondAttribute="bottom" id="KGl-Qz-XnR"/>
-                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="0Dq-g2-0E5" secondAttribute="bottom" id="NF8-3I-bSI"/>
-                            <constraint firstItem="2sk-uT-h54" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="O9z-wG-5ar"/>
-                            <constraint firstItem="CH5-mB-jhC" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="Oz9-mH-RAS"/>
-                            <constraint firstItem="2sk-uT-h54" firstAttribute="top" secondItem="3Dq-Rc-CDJ" secondAttribute="bottom" id="RHZ-Tm-wk0"/>
-                            <constraint firstItem="0Dq-g2-0E5" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="RT5-4I-Got"/>
-                            <constraint firstItem="CH5-mB-jhC" firstAttribute="top" secondItem="2sk-uT-h54" secondAttribute="top" id="Sbc-j2-Q5V"/>
-                            <constraint firstItem="HnN-Ai-rSS" firstAttribute="height" secondItem="0Dq-g2-0E5" secondAttribute="height" id="cKD-Pd-d4y"/>
-                            <constraint firstItem="3Dq-Rc-CDJ" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="eSb-sF-Ruk"/>
+                            <constraint firstItem="0Dq-g2-0E5" firstAttribute="top" secondItem="pOu-Ad-gnl" secondAttribute="bottom" id="5c9-qp-DPU"/>
+                            <constraint firstItem="0Dq-g2-0E5" firstAttribute="bottom" secondItem="wfy-db-euE" secondAttribute="top" id="Blo-m1-pUj"/>
+                            <constraint firstItem="CH5-mB-jhC" firstAttribute="leading" secondItem="pOu-Ad-gnl" secondAttribute="leading" id="BzO-QZ-Pq4"/>
+                            <constraint firstItem="HnN-Ai-rSS" firstAttribute="leading" secondItem="pOu-Ad-gnl" secondAttribute="leading" id="DBZ-Ys-rbW"/>
+                            <constraint firstItem="CH5-mB-jhC" firstAttribute="leading" secondItem="3Dq-Rc-CDJ" secondAttribute="leading" id="FLM-72-x9n"/>
+                            <constraint firstItem="HnN-Ai-rSS" firstAttribute="trailing" secondItem="0Dq-g2-0E5" secondAttribute="trailing" id="Hel-Ue-p9C"/>
+                            <constraint firstItem="HnN-Ai-rSS" firstAttribute="bottom" secondItem="wfy-db-euE" secondAttribute="top" id="I2O-jo-cl5"/>
+                            <constraint firstItem="pOu-Ad-gnl" firstAttribute="trailing" secondItem="HnN-Ai-rSS" secondAttribute="trailing" id="Pc5-vG-yRy"/>
+                            <constraint firstItem="0Dq-g2-0E5" firstAttribute="top" secondItem="HnN-Ai-rSS" secondAttribute="top" id="Qpp-Zk-9R4"/>
+                            <constraint firstAttribute="trailing" secondItem="3Dq-Rc-CDJ" secondAttribute="trailing" id="U7e-lq-3gf"/>
+                            <constraint firstItem="pOu-Ad-gnl" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="-20" id="a6K-t4-1e9"/>
+                            <constraint firstItem="pOu-Ad-gnl" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="bBB-6W-Cch"/>
+                            <constraint firstItem="3Dq-Rc-CDJ" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="dHe-7z-cW6"/>
                             <constraint firstItem="CH5-mB-jhC" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="eht-PD-USD"/>
-                            <constraint firstItem="2sk-uT-h54" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="gSJ-ZF-c6Y"/>
-                            <constraint firstItem="CH5-mB-jhC" firstAttribute="width" secondItem="8bC-Xf-vdC" secondAttribute="width" id="iBb-mm-hJx"/>
-                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="HnN-Ai-rSS" secondAttribute="bottom" id="jQE-HI-0PG"/>
-                            <constraint firstItem="0Dq-g2-0E5" firstAttribute="width" secondItem="8bC-Xf-vdC" secondAttribute="width" id="kFB-GP-nd7"/>
-                            <constraint firstItem="CH5-mB-jhC" firstAttribute="top" secondItem="2sk-uT-h54" secondAttribute="top" id="mxG-p0-gcb"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="pOu-Ad-gnl" secondAttribute="trailing" constant="-20" id="gav-7J-1Cv"/>
+                            <constraint firstItem="3Dq-Rc-CDJ" firstAttribute="bottom" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="klM-ts-IfW"/>
+                            <constraint firstItem="pOu-Ad-gnl" firstAttribute="trailing" secondItem="CH5-mB-jhC" secondAttribute="trailing" id="mXq-Mb-SF9"/>
                             <constraint firstItem="CH5-mB-jhC" firstAttribute="bottom" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="nOI-Hh-PR8"/>
-                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="0Dq-g2-0E5" secondAttribute="bottom" id="puA-ZL-9LS"/>
-                            <constraint firstItem="0Dq-g2-0E5" firstAttribute="top" secondItem="2sk-uT-h54" secondAttribute="bottom" id="uXk-eS-Fia"/>
-                            <constraint firstItem="2sk-uT-h54" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="vFD-Zz-WAK"/>
-                            <constraint firstItem="CH5-mB-jhC" firstAttribute="bottom" secondItem="2sk-uT-h54" secondAttribute="bottom" id="ytj-Rr-Sz3"/>
+                            <constraint firstItem="3Dq-Rc-CDJ" firstAttribute="trailing" secondItem="CH5-mB-jhC" secondAttribute="trailing" id="sD9-lJ-kyX"/>
+                            <constraint firstItem="HnN-Ai-rSS" firstAttribute="leading" secondItem="0Dq-g2-0E5" secondAttribute="leading" id="u2V-yt-eNo"/>
+                            <constraint firstItem="CH5-mB-jhC" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="xc5-Ib-LyN"/>
                         </constraints>
                         <variation key="default">
                             <mask key="constraints">
-                                <exclude reference="KGl-Qz-XnR"/>
-                                <exclude reference="O9z-wG-5ar"/>
                                 <exclude reference="2cz-Kg-xEB"/>
                                 <exclude reference="2zm-jB-RJa"/>
-                                <exclude reference="Sbc-j2-Q5V"/>
                                 <exclude reference="eht-PD-USD"/>
                                 <exclude reference="nOI-Hh-PR8"/>
-                                <exclude reference="ytj-Rr-Sz3"/>
+                                <exclude reference="a6K-t4-1e9"/>
+                                <exclude reference="gav-7J-1Cv"/>
                             </mask>
                         </variation>
                     </view>
@@ -165,10 +148,10 @@
                     <size key="freeformSize" width="600" height="600"/>
                     <connections>
                         <outlet property="backButton" destination="df1-g7-7pW" id="6dF-kb-hIN"/>
+                        <outlet property="centerView" destination="pOu-Ad-gnl" id="3B3-OE-Ey9"/>
                         <outlet property="forwardButton" destination="vdW-gT-6dL" id="1KP-nY-fFV"/>
                         <outlet property="progressView" destination="CH5-mB-jhC" id="eAC-5V-xux"/>
                         <outlet property="toolbar" destination="0Dq-g2-0E5" id="dcT-PS-y18"/>
-                        <outlet property="webView" destination="2sk-uT-h54" id="A5b-OD-K3R"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
